[gd_scene load_steps=3 format=3 uid="uid://54qwg5cx6hw3"]

[ext_resource type="PackedScene" uid="uid://cf4w2hhtf73dt" path="res://plugins/Macroboard/scenes/EditButtonPopup.tscn" id="1"]
[ext_resource type="Script" path="res://plugins/Macroboard/scripts/Macroboard.gd" id="3"]

[node name="Macroboard" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("3")

[node name="RowSeparator" type="VBoxContainer" parent="."]
layout_mode = 0
theme_override_constants/separation = 10

[node name="EditButtonPopup" parent="." instance=ExtResource("1")]
visible = false

[connection signal="item_rect_changed" from="." to="." method="_on_size_changed"]
